# bread_dog_bot_GUI

./: config.yml  main.py  pyproject.toml  readme.md
models/: __init__.py  mainWindow.py  settingWindow.py
widgets/: __init__.py  tabWidget.py
